# phishdetect-cli

./: LICENSE  README.md  requirements.txt
phishing-tool/: pyproject.toml
phishing-tool/emails/: Donation.eml  sign-in.eml
phishing-tool/helper/: Parser.py  attachments.py  auth_checks.py  domain_tools.py  phishdetect.py  report.py  sandbox.py  scorer.py  url_tools.py
